# sider

./: .gitignore  CMakeLists.txt  README.md  main.cpp  peer.cpp  shared.h
include/: elements.h  protocol.h  shared.h  storage.h
src/: main.cpp  peer.cpp  protocol.cpp  storage.cpp
